@@ -24,11 +24,8 @@ because the protocol does not support deletion.
 A git-lfs special remote also functions as a regular git remote. You can
 use things like `git push` and `git pull` with it.
 
-To enable an existing git-lgs remote in another clone of the repository,
+To enable an existing git-lfs remote in another clone of the repository,
 you'll need to provide an url to it again. It's ok to provide a different
 url as long as it points to the same git-lfs repository.
 
 	git annex enableremote lfs url=https://github.com/yourname/yourrepo.git
-
-Note that http urls currently only allow read access to the git-lfs
-repository.
